# Robot-System-Project

./: README.md
robot/: dockerfile  merged_map.pgm  merged_map.yaml  prod_launch.sh  restart_gazebo.sh  startup.sh
robot/src/: map1.pgm  map1.yaml  merged_map.pgm  save_map.sh
robot/src/cartographer_slam/: CMakeLists.txt  package.xml
robot/src/common_interfaces/: package.xml  setup.cfg  setup.py
robot/src/debug_log/: package.xml  setup.cfg  setup.py
robot/src/map_merger/: package.xml  setup.py
robot/src/mission/: package.xml  setup.py
robot/src/mission_state/: package.xml  setup.py
robot/src/random_walk/: package.xml  setup.py
robot_ws/: build_and_launch.sh  fake_robot1_odom.py  send_fake_udp_robot2.py  test_p2p_alone.py
robot_ws/src/display_icon/: package.xml  setup.cfg  setup.py
robot_ws/src/display_icon/display_icon/: display_farthest_node.py
robot_ws/src/display_icon/launch/: display_launch.py
robot_ws/src/p2p_comm/: package.xml  setup.cfg  setup.py
robot_ws/src/p2p_comm/launch/: p2p_launch.py
robot_ws/src/p2p_comm/p2p_comm/: p2p_node.py
robot_ws/src/robot_explorer/: package.xml  setup.cfg  setup.py
robot_ws/src/robot_explorer/launch/: robot_explorer.launch.py
robot_ws/src/robot_explorer/robot_explorer/: random_walk_node.py  robot_explorer.py
robot_ws/src/robot_explorer/rviz/: default.rviz
site-web/: docker-compose.yaml  dockerfile  package.json
site-web/client/: angular.json  launch-mobile.bat  launch-mobile.sh  launch-pc.bat  launch-pc.sh  package-lock.json  package.json
site-web/common/: action.robot.ts  events.ts
site-web/server/: package-lock.json  package.json  tsconfig.spec.json
(+147 files in other folders)
