<package format="3">
  <name>display_icon</name>
  <version>0.0.1</version>
  <description>Affiche une icône si le robot est le plus éloigné</description>
  <maintainer email="ton@mail.com">ton-nom</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
