<?xml version="1.0"?>
<package format="3">
  <name>robot_explorer</name>
  <version>0.0.1</version>
  <description>Package pour l'exploration du robot avec RViz</description>
  <maintainer email="ton.email@domaine.com">Ton Nom</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <!-- Pour lancer RViz -->
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
